# open-anonymizer-app

./: .gitignore  Dockerfile  README.md  app.py  get_model.py  pyproject.toml
.streamlit/: config.toml
src/: anon.py  visual.py
